padding left on 'social-list' class was causing alignment issue, fixed with padding:0

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ h1, h2, strong {
 
 ul {
     list-style-type: none;
+    margin: 0;
 }
 
 p {
@@ -97,23 +98,28 @@ a {
     padding: 4em 0;
 }
 
-.footer-main {
+.footer-main,
+.social-list {
     grid-column: 2 / -2;
 }
 
-.footer-social {
-    margin: 0;
-    order: -2;
-    grid-column: 2 / -2;
+.social-list {
+    order: -1;
+    list-style: none;
+    padding: 0;
+    margin: 0 0 2em;
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    margin-bottom: 2em;
-    /* background: red; */
+    justify-content: center;
 }
 
-.social-item {
-    margin-left: -2em;
+.social-link {
+    color: #005752;
+    font-size: 1.5rem;
+    margin: 0 .5em;
+}
+
+.social-link:hover {
+    color: #001a17;
 }
 
 @media (min-width: 700px) {
